[tool.poetry]
name = "finalproject_dukhanina_galina_m25-555"
version = "0.1.0"
description = "ValutaTrade Hub — курсы валют, портфолио, CLI"
authors = ["Духанина Галина"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.16.0"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_directory = "data"
rates_ttl_seconds = 300
currency_info_ttl_seconds = 3600
default_base_currency = "USD"
log_level = "INFO"
log_file = "logs/valutatrade.log"
